fix(pinterest): mobile mask bg wrong color

--- a/styles/pinterest/catppuccin.user.less
+++ b/styles/pinterest/catppuccin.user.less
@@ -1153,6 +1153,15 @@
         background: @surface0;
       }
     }
+
+    // mobile mask
+    [data-test-id="mobile-signup-mask"] {
+      background-color: @base !important;
+      border-color: @base !important;
+      div[style*="border"] {
+        border-color: var(--color-border-container) !important;
+      }
+    }
   }
 }
 
